# glref

./: .gitmodules  2d_pointlighting_with_linemaps.py  2d_pointlighting_with_shadowmaps.py  2d_pointlighting_with_shadowmaps_linegen.py  3d_spotlight_shadowmaps_trigen.py  LICENSE  WIP_bleed_edges_depth.py  WIP_card_bvh.py  WIP_line_tracing.py  WIP_line_tracing_lighting.py  WIP_line_tracing_v2.py  WIP_line_tracing_v3.py  WIP_line_tracing_v4.py  WIP_outline.py  WIP_simple_sphere_mesh_shader.py  WIP_spherical_shadowing.py  WIP_ssao_cavity_frag.py  WIP_stencil_shared_vision.py  WIP_udim_perf_overlay_test.py  WIP_udim_vt0.py  _parse_geogebra_map.py  _test_tuxedo_bokeh.py  bluenoise.py  bluenoise2.py  brute_force_bc4.py  compile_to_webgl.txt  df_rtrace_hybrid.py  gpu_pixel_game.py  grass_scatterer.py  grid_based_bvh.py  histogram.py  mtsdf_text_rendering.py  multi_render_with_culling.py  planar_reflections.py  raster_access_pattern.py  shared_buffer_render.py  simple_cube_mesh_shader.py  ssao.py  sscrv.py  sscrv_adaptive_kuwahara.py  (+6 more)
card_bvh_lib/: __init__.py  bvh.py  card.py
data/: generate_stencil_char_map_2x4_layout.py
gpu_pixel_game_lib/: __init__.py  ai-navlinking.txt  pipeline.txt
line_bvh/: __init__.py  plv1.py  v1.py
line_df_hybrid/: __init__.py  v1.py
perf_overlay_lib/: __init__.py  draw_numbers_builder.py  draw_text_builder.py  timer_samples256.py
shaders/: 2d_linemap_plane_blocking_bbox.frag  2d_linemap_plane_blocking_bbox.vert  2d_linemap_plane_blocking_clear.frag  2d_linemap_plane_blocking_clear.vert  2d_linemap_plane_blocking_gen.frag  2d_linemap_plane_blocking_gen.vert  2d_linemap_plane_blocking_gen_one_pass.frag  2d_linemap_plane_blocking_gen_one_pass.vert  2d_linemap_plane_blocking_vis_surface.vert  brute_force_bc4_finalize.comp  brute_force_bc4_iteration.comp  brute_force_bc4_prev.frag  brute_force_bc4_quant_vis.frag  common.glsl  constant_col.frag  draw_full_screen.vert  sorting.inl  (+9 more)
tools/: CMakeLists.txt  README.md  glref_thread_helper.h  glsl_asm_viewer.py
tools/indirect-mtsdf-utf8-gen/: CMakeLists.txt  main.cpp
(+207 files in other folders)
